base/src/main/java/com/example/base/error/ErrorHandler.kt
package com.example.base.error

import com.example.base.view.CanShowError


interface ErrorHandler {
    fun proceed(error: Throwable)
    fun attachView(view: CanShowError)
    fun detachView()
}